--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "convert-excel-to-json": "^1.7.0",
+    "excel-merge": "^1.1.2",
     "exceljs": "^4.2.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
@@ -16,10 +17,8 @@
     "grouped-data": "node ./src/grouped-data.js",
     "process-data": "node ./src/process-data.js",
     "merge-data": "node ./src/merge-data.js",
-
     "convert-excel": "node ./src/convert-excel.js",
     "convert-chart": "node ./src/convert-chart.js",
-
     "all": "node ./src/convert-json.js && node ./src/grouped-data.js && node ./src/process-data.js && node ./src/merge-data.js && node ./src/convert-excel.js && node ./src/convert-chart.js"
   },
   "author": "",
